# baiodigest

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  queries.toml  recipients.toml.example
data/: 2026-02-28.json  2026-03-01.json  2026-03-02.json  2026-03-03.json  2026-03-04.json  2026-03-05.json  2026-03-06.json  2026-03-07.json  2026-03-08.json  2026-03-09.json  2026-03-10.json  2026-03-11.json  2026-03-12.json  2026-03-13.json  2026-03-14.json  2026-03-15.json  2026-03-16.json  2026-03-17.json  2026-03-18.json  2026-03-19.json  2026-03-20.json  2026-03-21.json  2026-03-22.json  2026-03-23.json  2026-03-24.json  2026-03-25.json  2026-03-26.json  2026-03-27.json  2026-03-28.json  2026-03-29.json  2026-03-30.json  2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  (+41 more)
docs/: archive.html  index.html  newsletters.html  queries.html
docs/archive/: 2026-03.html  2026-04.html  2026-05.html
scripts/: run-daily.sh
static/: style.css  theme.js
tasks/: PLAN.md  PLAN_01.md  feedback.md
templates/: archive.html  base.html  daily.html  index.html  newsletter_issue.html  newsletter_source.html  newsletters.html  queries.html  weekly.html
tests/: test_biorxiv.py  test_config.py  test_fetchers.py  test_filters.py  test_main.py  test_models.py  test_newsletter_fetch.py  test_newsletter_gmail_client.py  test_newsletter_models.py  test_newsletter_parsers.py  test_newsletter_summarize.py  test_notify.py  test_pubmed.py  test_repo_metadata.py  test_site_generation.py
(+421 files in other folders)
