[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "baiodigest"
version = "0.1.0"
description = "Daily biology paper digest pipeline for PubMed and bioRxiv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-api-python-client>=2.169.0",
  "google-auth-oauthlib>=1.2.2",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/baiodigest"]
